-- 제휴 광고(쿠팡 파트너스 / 애드픽) 소재·클릭·노출 테이블
-- 관련 설계: docs/superpowers/specs/2026-09-01-ad-picke-store-design.md
--
-- 이 파일은 참고용이다. 운영은 spring.jpa.hibernate.ddl-auto=update 라 배포 시 자동 생성된다.
-- 스키마를 손으로 관리하는 환경이나 사후 검증이 필요할 때 쓴다.
--
-- CHECK 제약은 엔티티의 @Check 로도 선언되어 있어 테이블 최초 생성 시 함께 만들어진다.
-- 다만 ddl-auto=update 는 이미 있는 제약을 갱신하지 않는다.
-- enum 에 값을 추가하면 아래 ALTER 를 별도로 실행해야 한다.
--   ALTER TABLE ad_creatives DROP CONSTRAINT ck_ad_creatives_slot;
--   ALTER TABLE ad_creatives ADD CONSTRAINT ck_ad_creatives_slot CHECK (slot IN (...));
-- 빠뜨리면 새 지면의 INSERT 가 조용히 막힌다. AdCheckConstraintTest 가 제약과 enum 의 불일치를 먼저 잡는다.

CREATE TABLE IF NOT EXISTS ad_creatives (
    id          BIGSERIAL PRIMARY KEY,
    code        VARCHAR(16)  NOT NULL UNIQUE,
    network     VARCHAR(20)  NOT NULL,
    slot        VARCHAR(40)  NOT NULL,
    title       VARCHAR(100) NOT NULL,
    subtitle    VARCHAR(200),
    image_url   VARCHAR(500) NOT NULL,
    cta_text    VARCHAR(30)  NOT NULL,
    landing_url VARCHAR(1000) NOT NULL,
    status      VARCHAR(20)  NOT NULL,
    source      VARCHAR(20)  NOT NULL DEFAULT 'MANUAL',
    external_id VARCHAR(64),
    target_os   VARCHAR(20)  NOT NULL DEFAULT 'ALL',
    weight      INTEGER      NOT NULL DEFAULT 1,
    starts_at   TIMESTAMP,
    ends_at     TIMESTAMP,
    created_at  TIMESTAMP,
    updated_at  TIMESTAMP,
    CONSTRAINT ck_ad_creatives_network CHECK (network IN ('COUPANG', 'ADPICK')),
    CONSTRAINT ck_ad_creatives_slot CHECK (slot IN ('HOME_FEED', 'BATTLE_RESULT_BOTTOM', 'CHAT_ROOM_INLINE', 'ATTENDANCE_COMPLETE', 'PROFILE_BOTTOM')),
    CONSTRAINT ck_ad_creatives_status CHECK (status IN ('DRAFT', 'ACTIVE', 'PAUSED')),
    CONSTRAINT ck_ad_creatives_source CHECK (source IN ('MANUAL', 'ADPICK_API')),
    CONSTRAINT ck_ad_creatives_target_os CHECK (target_os IN ('ALL', 'ANDROID', 'IOS')),
    -- 애드픽 캠페인을 다시 찾는 키. 수동 등록 소재는 external_id 가 NULL 이라 중복되지 않는다.
    CONSTRAINT uk_ad_creatives_external UNIQUE (source, external_id)
);

-- 지면 조회는 (slot, status)로만 들어온다.
CREATE INDEX IF NOT EXISTS idx_ad_creatives_slot_status ON ad_creatives (slot, status);

CREATE TABLE IF NOT EXISTS ad_click_logs (
    id          BIGSERIAL PRIMARY KEY,
    creative_id BIGINT      NOT NULL,
    slot        VARCHAR(40) NOT NULL,
    ip_hash     VARCHAR(64),
    user_agent  VARCHAR(500),
    created_at  TIMESTAMP,
    updated_at  TIMESTAMP,
    CONSTRAINT ck_ad_click_logs_slot CHECK (slot IN ('HOME_FEED', 'BATTLE_RESULT_BOTTOM', 'CHAT_ROOM_INLINE', 'ATTENDANCE_COMPLETE', 'PROFILE_BOTTOM'))
);

CREATE INDEX IF NOT EXISTS idx_ad_click_logs_creative ON ad_click_logs (creative_id);
CREATE INDEX IF NOT EXISTS idx_ad_click_logs_created_at ON ad_click_logs (created_at);

-- 노출은 raw 로그로 쌓지 않는다. 배너가 스크롤에 걸릴 때마다 행이 생기면 금방 수천만 건이 된다.
CREATE TABLE IF NOT EXISTS ad_impression_daily (
    id          BIGSERIAL PRIMARY KEY,
    creative_id BIGINT      NOT NULL,
    slot        VARCHAR(40) NOT NULL,
    stat_date   DATE        NOT NULL,
    impressions BIGINT      NOT NULL DEFAULT 0,
    created_at  TIMESTAMP,
    updated_at  TIMESTAMP,
    CONSTRAINT uk_ad_impression_daily UNIQUE (creative_id, slot, stat_date),
    CONSTRAINT ck_ad_impression_daily_slot CHECK (slot IN ('HOME_FEED', 'BATTLE_RESULT_BOTTOM', 'CHAT_ROOM_INLINE', 'ATTENDANCE_COMPLETE', 'PROFILE_BOTTOM'))
);

CREATE INDEX IF NOT EXISTS idx_ad_impression_daily_date ON ad_impression_daily (stat_date);
